# 164-pinn-jump-diffusion

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  greeks.py  jump_diffusion_pinn.py  merton_analytical.py  requirements.txt  train.py  visualize.py
rust_pinn_jump/: Cargo.toml
rust_pinn_jump/examples/: quick_start.rs
rust_pinn_jump/src/: analytical.rs  backtest.rs  data.rs  lib.rs  params.rs  pinn.rs  quadrature.rs
