[package]
name = "pinn_jump_diffusion"
version = "0.1.0"
edition = "2021"
description = "Physics-Informed Neural Networks for Merton Jump Diffusion option pricing"
authors = ["ML Trading Examples"]
license = "MIT"
keywords = ["trading", "crypto", "pinn", "jump-diffusion", "options", "merton"]

[lib]
name = "pinn_jump_diffusion"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# BINARIES
# ═══════════════════════════════════════════════════════════════════════════════

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "price_options"
path = "src/bin/price_options.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# EXAMPLES
# ═══════════════════════════════════════════════════════════════════════════════

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════

[dependencies]
# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Statistics and distributions
statrs = "0.16"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CSV for data export/import
csv = "1.3"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Ordered float for comparisons
ordered-float = "4.2"

# Pretty printing and tables
tabled = "0.15"
colored = "2.1"

# Progress bars
indicatif = "0.17"

# HMAC for API authentication (Bybit)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Float comparisons
approx = "0.5"

[dev-dependencies]
tokio-test = "0.4"
